k8s/polka/minio-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: polka
spec:
  serviceName: minio
  replicas: 1
  selector:
    matchLabels:
      app: polka-minio
  template:
    metadata:
      labels:
        app: polka-minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2025-02-28T09-55-16Z
          imagePullPolicy: IfNotPresent
          args:
            - server
            - /data
          ports:
            - containerPort: 9000
              name: s3
          readinessProbe:
            httpGet:
              path: /minio/health/live
              port: s3
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: s3
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
          volumeMounts:
            - name: minio-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: minio-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
