k8s/polka/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: polka
spec:
  selector:
    app: polka-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
