k8s/polka/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: polka
spec:
  selector:
    app: polka-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
