k8s/polka/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: polka
spec:
  selector:
    app: polka-minio
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
