k8s/polka/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: polka
spec:
  clusterIP: None
  selector:
    app: polka-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
