k8s/polka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polka
  namespace: polka
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: polka.keykomi.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  tls:
    - hosts:
        - polka.keykomi.com
      secretName: polka-keykomi-com-tls
